--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
 
-    <main id="content">
+    <main id="main">
      <section id="welcome-section">
       <h1>Welcome to carolrolis portfolio!</h1>
       <p>This page contains some of the projects required for the conclusion of freecodecamp's Responsive Web Design course.<br><br>
@@ -29,6 +29,7 @@
      </section>
 
      <section id="projects">
+      <h1>Projects</h1>
       <div class="project-tile" id="project1">
        <h1 class="title-project">Landing Page</h1>
        <div class="block">
