--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
          <img class="image" src="https://cdn.discordapp.com/attachments/607999459087089694/1200593732270047342/image.png?ex=65c6bf0b&is=65b44a0b&hm=0cf837d8a3fd9cacc0dc73806977e33a63f836ee94f5457404b91714e321749b&">
          <img class="image" src="https://cdn.discordapp.com/attachments/607999459087089694/1200591254942126181/image.png?ex=65c6bcbd&is=65b447bd&hm=bb24639ee8e8e66d8eb7adba5aca1a37fb313cd2d02e7a011932e93d7d3c85c8&">
          <p class="text-project">A page tributing my dog and kinda his biography. It contains two photo galleries of him and my other dog.<br><br>
-         If you wanna see them go <a class="link" target="_blank" href="https://carolrolis.github.io/Sushi-History/">here</a>.
+         If you wanna see them go <a class="link" target="_blank" href="https://carolrolis.github.io/Dog-Tribute/">here</a>.
         </div>
       </div>
      </section>
