--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <div class="project-tile" id="project1">
        <h1 class="title-project">Landing Page</h1>
        <div class="block">
-        <img class="image" src="https://cdn.discordapp.com/attachments/607999459087089694/1200559107975954502/image.png?ex=65c69ecc&is=65b429cc&hm=ea3e1fa6d0337f37e30162e8d6714696d7f36a5f42080d4becd1444fb078b153&">
-        <img class="image" src="https://cdn.discordapp.com/attachments/607999459087089694/1200560134670270495/image.png?ex=65c69fc1&is=65b42ac1&hm=a05cd47bb28cf67cd3e6a2dee4121f8d56581da65e03de8871d48c2a70aa2e03&">
+        <img class="image" src="https://github.com/carolrolis/Course-Portfolio/blob/main/images/port1.png?raw=true">
+        <img class="image" src="https://github.com/carolrolis/Course-Portfolio/blob/main/images/port12.png?raw=true">
         <p class="text-project">A landingpage-like simulating a site where I display the various(3) interfaces I make and the cost of them. Available on mobile too.<br><br>
         It can be seen more precisely in <a class="link" target="_blank" href="https://carolrolis.github.io/Landing-Page/">here</a>.
         </p>
@@ -43,8 +43,8 @@
       <div class="project-tile" id="project2">
        <h1 class="title-project">Technical Documentation Page</h1>
        <div class="block">
-        <img class="image" src="https://cdn.discordapp.com/attachments/607999459087089694/1200560399100149851/image.png?ex=65c6a000&is=65b42b00&hm=91f75d6a029414bb0c3c4b2a674178f321d26a7e5d5e220e4825461ffd5d0b68&">
-        <img class="image" src="https://cdn.discordapp.com/attachments/607999459087089694/1200560505689997453/image.png?ex=65c6a019&is=65b42b19&hm=c27aa2ba86f9e4f119beeecbf4508bebe7efb99d5f29b9db0eda6efd3a4a1935&">
+        <img class="image" src="https://github.com/carolrolis/Course-Portfolio/blob/main/images/port2.png?raw=true">
+        <img class="image" src="https://github.com/carolrolis/Course-Portfolio/blob/main/images/port22.png?raw=true">
         <p class="text-project">A page with informations copied from Wikipedia about the history of sushi. Also available for mobile.<br><br>
         If you want to know something about the sushi history check <a class="link" target="_blank" href="https://carolrolis.github.io/Sushi-History/">here</a>.
        </div>
@@ -52,8 +52,8 @@
       <div class="project-tile">
         <h1 class="title-project">Tribute Page</h1>
         <div class="block">
-         <img class="image" src="https://cdn.discordapp.com/attachments/607999459087089694/1200593732270047342/image.png?ex=65c6bf0b&is=65b44a0b&hm=0cf837d8a3fd9cacc0dc73806977e33a63f836ee94f5457404b91714e321749b&">
-         <img class="image" src="https://cdn.discordapp.com/attachments/607999459087089694/1200591254942126181/image.png?ex=65c6bcbd&is=65b447bd&hm=bb24639ee8e8e66d8eb7adba5aca1a37fb313cd2d02e7a011932e93d7d3c85c8&">
+         <img class="image" src="https://github.com/carolrolis/Course-Portfolio/blob/main/images/port3.png?raw=true">
+         <img class="image" src="https://github.com/carolrolis/Course-Portfolio/blob/main/images/port33.png?raw=true">
          <p class="text-project">A page tributing my dog and kinda his biography. It contains two photo galleries of him and my other dog.<br><br>
          If you wanna see them go <a class="link" target="_blank" href="https://carolrolis.github.io/Dog-Tribute/">here</a>.
         </div>
